# echo

./: README.md  pubspec.yaml  test_uri.dart
.github/workflows/: publish_wiki.yml  release.yml
docs/: Architecture.md  Contributing.md  Features.md  Home.md  Installation.md  _Footer.md  _Sidebar.md
lib/: export_logo.dart  main.dart
lib/features/home/presentation/: about_dialog.dart  custom_app_bar_content.dart  dialogs.dart  export_collection_dialog.dart  import_collection_dialog.dart  request_tabs_widget.dart  sidebar_widget.dart  splash_screen.dart  top_menu_bar.dart
lib/features/postman/: importer.dart
lib/models/: app_settings_model.dart  app_settings_model.g.dart  collection_model.dart  collection_model.g.dart  environment_profile_model.dart  environment_profile_model.g.dart  folder_model.dart  folder_model.g.dart  request_model.dart  request_model.g.dart  response_model.dart  session_model.dart  session_model.g.dart
lib/providers/: active_request_provider.dart  collections_provider.dart  collections_provider.g.dart  open_requests_provider.dart  open_requests_provider.g.dart  request_execution_provider.dart  request_execution_provider.g.dart
lib/services/: collection_exporter.dart  collection_importer.dart  collection_service.dart  http_service.dart  isar_service.dart
lib/utils/: http_colors.dart
lib/widgets/: autocomplete_manager.dart  echo_logo.dart  key_value_table.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
test/: widget_test.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+6 files in other folders)
